--- a/chitietsanpham.html
+++ b/chitietsanpham.html
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="icon"href="./access/Img/Gap-Logo.webp"type="image/x-icon"/>
     <link rel="stylesheet" href="./access/css/base.css">
-    <link rel="stylesheet" href="./access/css/chitietsp.css">
+    <link rel="stylesheet" href="./access/css/chitietsanpham.css">
     <!-- <link rel="stylesheet" href="./chitietsp.html"> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -29,7 +29,7 @@
       <nav aria-label="breadcrumb ">
         <ol class="breadcrumb ">
           <li class="breadcrumb-item"><a href="/trangchu.html">Trang chủ</a></li>
-          <li class="breadcrumb-item"><a href="/trangsp.html">Sản Phẩm</a></li>
+          <li class="breadcrumb-item"><a href="/sanpham.html">Sản Phẩm</a></li>
           <li class="breadcrumb-item active" aria-current="page" id="curent_product"></li>
         </ol>
     </nav>
@@ -138,7 +138,7 @@
         <h2>Sản phẩm có liên quan</h2>
         <div class="contaier ">
             <div class=" home-product-item-wrapper">
-                <form id="showSP" action="./chitietsp.html" method="get">
+                <form id="showSP" action="./chitietsanpham.html" method="get">
                     <div class="row " id="total_product"></div>
                 </form>
             </div>
@@ -146,7 +146,7 @@
     </div>
     <div class="footer"></div>
     <script src="./access/js/base.js"></script>
-    <script src="./access/js/trangchitietsp.js"></script>
+    <script src="./access/js/chitietsanpham.js"></script>
 
 </body>
 
