--- a/sanpham.html
+++ b/sanpham.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./access/fonts/fontawesome-free-6.2.0-web/css/all.min.css">
     <link rel="stylesheet" href="./access/css/base.css">
     <link rel="icon"href="./access/Img/Gap-Logo.webp"type="image/x-icon"/>
-    <link rel="stylesheet" href="./access/css/trangsp.css">
+    <link rel="stylesheet" href="./access/css/sanpham.css">
     <script>
         window.onload = function () {
             LoadJson();
@@ -77,7 +77,7 @@
                                 <h3 id="Product__header-title" class="category_item"><button id="all-product">Tất cả sản phẩm</button></h3>
                             </div>
                             <div class="container home-product-item-wrapper">
-                                <form id="showSP" action="./chitietsp.html" method="get">
+                                <form id="showSP" action="./chitietsanpham.html" method="get">
                                     <div class="row" id="total_product"></div>
                                     <!-- <div class="row product-not-found">
                                         fadf
@@ -93,7 +93,7 @@
     <div class="footer "></div>
 
     <script src="./access/js/base.js"></script>
-    <script src="./access/js/trangsp.js"></script>
+    <script src="./access/js/sanpham.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
