update dang ky va dang ky thanh cong

--- a/dangkythanhcong.html
+++ b/dangkythanhcong.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="header" id="header">
         <div class="logo-container ">
-            <a href="./trangchu.html"><img src="./access/Img/Gap-Logo.webp" alt="" class="logo"></a>
+            <!-- <a href="./trangchu.html"><img src="./access/Img/Gap-Logo.webp" alt="" class="logo"></a> -->
             <h2 style="margin-left: 10px; ">Đăng kí</h2>
         </div>
         <div >
@@ -34,7 +34,7 @@
             <i class="fa-regular fa-circle-check"></i>
             </div>
             <div class="text">
-                Chào mừng bạn đến với GAP 2002!
+                Didu Club xin chào 💕
             </div>
             <div class="button">
                 <button class="w-100">
@@ -44,6 +44,6 @@
         </form>
     </div>
     <div class="footer"></div>
-    <script src="./access/js/base.js"></script>
+    <script src="./assets/js/base.js"></script>
 </body>
 </html>
